@@ -31,11 +31,13 @@ seats=Seat0
 # xdmcp-port = XDMCP UDP/IP port to communicate on
 #
 #[SeatDefaults]
-#xserver-command=/usr/bin/X
+#xserver-command=X
 #xserver-layout=
 #xserver-config=
 #xserver-key=0x0123456789ABCD
 #greeter-theme=example-gtk-gnome
+#greeter-background=
+#greeter-show-user-list=true
 #xsession=gnome
 #xsession-wrapper=
 #autologin-guest=false
@@ -50,20 +52,6 @@ seats=Seat0
 # Can override any of the options from defaults e.g. greeter-theme=kde
 #
 #[Seat0]
-
-#
-# User manager configuration
-#
-# load-users = True if can provide user list to greeter
-# minimum-uid = Minimum UID required to be shown in greeter
-# hidden-users = Users that are not shown to the user
-# hidden-shells = Shells that indicate a user cannot login
-#
-[UserManager]
-#load-users=true
-#minimum-uid=500
-#hidden-users=nobody nobody4 noaccess
-#hidden-shells=/bin/false /usr/sbin/nologin
 
 #
 # Guest account configuration
