@@ -4,14 +4,11 @@ lib_LTLIBRARIES = liblightdm-qt-0.la
 MOC_FILES = \
 	greeter_moc.cpp \
 	sessionsmodel_moc.cpp \
-	config_moc.cpp \
 	usersmodel_moc.cpp 
 
 greeter_moc.cpp: greeter.h
 	moc $< -o $@
 sessionsmodel_moc.cpp: sessionsmodel.h
-	moc $< -o $@
-config_moc.cpp: config.h
 	moc $< -o $@
 usersmodel_moc.cpp: usersmodel.h
 	moc $< -o $@
@@ -22,14 +19,12 @@ liblightdm_qt_0include_HEADERS = \
 	language.h \
 	sessionsmodel.h \
 	user.h \
-	config.h \
 	usersmodel.h \
 	UsersModel \
 	Greeter \
 	Language \
 	SessionsModel \
-	User \
-	Config
+	User
 
 liblightdm_qt_0includedir=$(includedir)/lightdm-qt-0/QLightDM
 
@@ -42,7 +37,6 @@ liblightdm_qt_0_la_SOURCES = \
 	language.cpp \
 	sessionsmodel.cpp \
 	user.cpp \
-	config.cpp \
 	usersmodel.cpp \
 	$(MOC_FILES)
 
