@@ -12,6 +12,8 @@ Overview of changes in lightdm 0.4.5
         understand.  Users should set [SeatDefaults] section with settings for
         all seats, and can override each setting in a per seat configuration.
       - Support setting autologin user to guest account
+      - Split the user accounts configuration into /etc/lightdm/users.conf so the
+        main config can be private.
     * Drop most of the configure options, they aren't necessary
 
 Overview of changes in lightdm 0.4.4
